[package]
name = "komodo_airdrop"
description = "An airdrop manager for Komodo and its assetchains"
version = "0.0.1"
authors = ["Jorian <jorian@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
komodo_rpc_client = { git = "https://github.com/n41r0j/komodorpc-rust-client" }
derive_more = "0.14"