[package]
name = "komodo_airdrop"
description = "An airdrop manager for Komodo and its assetchains"
version = "0.0.1"
authors = ["Jorian <jorian@outlook.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
komodo-rpc = { path = "../rust-komodo-rpc/client" }
derive_more = "0.99"
serde_json = "1.0"
komodo_snapshot = { path = "../snapshot", version = "0.1.0" }
# komodo_snapshot = { git = "https://github.com/jorian/komodo-snapshot", version = "0.1.0" }